--- a/karma-browsertest/package.json
+++ b/karma-browsertest/package.json
@@ -20,6 +20,7 @@
     "karma-jasmine": "^4.0.1",
     "karma-nyan-reporter": "^0.2.5",
     "karma-sourcemap-loader": "^0.3.8",
+    "karma-spec-reporter": "^0.0.32",
     "karma-webpack": "^5.0.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.3.2",
