Update webpack example

--- a/webpack-react/.prettierrc
+++ b/webpack-react/.prettierrc
@@ -4,10 +4,7 @@
     "useTabs": false,
     "overrides": [
         {
-            "files": [
-                "*.json",
-                "*.yml"
-            ],
+            "files": ["*.json", "*.yml"],
             "options": {
                 "tabWidth": 2
             }
