--- a/webpack-react/package.json
+++ b/webpack-react/package.json
@@ -7,10 +7,11 @@
     "start": "webpack serve --progress --color"
   },
   "devDependencies": {
-    "ts-loader": "^9.0.0",
-    "typescript": "^4.1.0",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.1.14"
+    "@types/node": "^14.0.0",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.8.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.1"
   }
 }
