--- a/webpack-react/tsconfig.json
+++ b/webpack-react/tsconfig.json
@@ -4,12 +4,13 @@
     "module": "commonjs",
     "strict": true,
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "newLine": "LF",
-    "outDir": "lib/",
+    "outDir": "dist/",
     "sourceMap": true,
     "target": "ES2020",
     "lib": ["ES2020", "DOM"],
