--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -2,9 +2,27 @@
 name = "wasm-pack-test"
 version = "0.1.0"
 authors = ["Guidsdo"]
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
+js-sys = "0.3.60"
 wasm-bindgen = "0.2.83"
+
+[dependencies.web-sys]
+version = "0.3.60"
+features = [
+  'CanvasRenderingContext2d',
+  'console',
+  'CssStyleDeclaration',
+  'Document',
+  'Element',
+  'EventTarget',
+  'HtmlCanvasElement',
+  'HtmlElement',
+  'MouseEvent',
+  'Node',
+  'Window'
+]
