--- a/react-styled-components/package.json
+++ b/react-styled-components/package.json
@@ -9,21 +9,28 @@
     "ts:watch": "tsc -w --noEmit -p tsconfig.json"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "@types/styled-components": "^5.1.26",
-    "@vitejs/plugin-react": "^3.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "styled-components": "^5.3.6",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.8.4",
-    "vite": "^4.0.4"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6",
+    "@typescript-eslint/parser": "^6",
+    "@vitejs/plugin-react": "^4",
+    "eslint": "^8",
+    "eslint-plugin-import": "^2",
+    "eslint-plugin-prettier": "^5",
+    "eslint-plugin-react": "^7",
+    "eslint-plugin-react-hooks": "^4",
+    "eslint-plugin-unused-imports": "^3",
+    "prettier": "^3.2.4",
+    "typescript": "^5",
+    "vite": "^5"
   },
   "dependencies": {
-    "mobx": "^6.7.0",
-    "mobx-react": "^7.6.0"
+    "mobx": "^6",
+    "mobx-react": "^9",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-is": "^18",
+    "styled-components": "^6"
   }
 }
