--- a/monaco-editor/tsconfig.json
+++ b/monaco-editor/tsconfig.json
@@ -1,11 +1,25 @@
 {
-	"compilerOptions": {
-		"target": "ESNext",
-		"strict": true,
-		"module": "ESNext",
-		"jsx": "react-jsx",
-		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true
-	},
-	"include": ["./src"]
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "ESNext",
+    "sourceMap": true,
+    "esModuleInterop": true,
+    "noEmit": true,
+    "skipLibCheck": true,
+    "moduleResolution": "Bundler",
+    "useDefineForClassFields": true,
+    "allowJs": false,
+    "allowSyntheticDefaultImports": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "newLine": "LF",
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "lib": ["DOM", "DOM.Iterable", "ES2022"],
+    "jsx": "react-jsx"
+  },
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
