--- a/monaco-editor/package.json
+++ b/monaco-editor/package.json
@@ -1,20 +1,37 @@
 {
-	"name": "browser-esm-vite-react",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc --noEmit && vite build",
-		"ts:watch": "tsc --noEmit -w -p .",
-		"serve": "vite preview"
-	},
-	"dependencies": {},
-	"devDependencies": {
-		"monaco-editor": "^0.50.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"@types/react": "^17.0.39",
-		"@types/react-dom": "^17.0.11",
-		"@vitejs/plugin-react": "^1.1.4",
-		"typescript": "^5.4.5",
-		"vite": "^2.9.17"
-	}
+  "name": "browser-esm-vite-react",
+  "version": "0.0.1",
+  "license": "UNLICENSED",
+  "private": true,
+  "packageManager": "pnpm@9.9.0",
+  "engineStrict": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc --noEmit && vite build",
+    "ts:watch": "tsc --noEmit -w -p .",
+    "serve": "vite preview",
+    "antlr": "antlr4ng -Dlanguage=TypeScript -o src/antlr4-gen/ -visitor -listener -Xexact-output-dir SQL.g4"
+  },
+  "dependencies": {
+    "antlr4ng-cli": "^2.0.0",
+    "antlr4ng": "^3.0.7",
+    "monaco-editor": "^0.51.0",
+    "monaco-languageclient": "^8.8.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13",
+    "vscode-jsonrpc": "^8.2.1",
+    "vscode-languageserver": "^9.0.1",
+    "vscode-languageserver-textdocument": "^1.0.12",
+    "vscode-ws-jsonrpc": "^3.3.2"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
+    "@vitejs/plugin-react": "^1.3.2",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2"
+  }
 }
