--- a/monaco-editor/package.json
+++ b/monaco-editor/package.json
@@ -13,21 +13,23 @@
     "antlr": "antlr4ng -Dlanguage=TypeScript -o src/antlr4-gen/ -visitor -listener -Xexact-output-dir MyLang.g4"
   },
   "dependencies": {
-    "antlr4ng-cli": "^2.0.0",
     "antlr4ng": "^3.0.7",
-    "monaco-editor": "^0.51.0",
-    "monaco-languageclient": "^8.8.3",
+    "antlr4ng-cli": "^2.0.0",
+    "monaco-editor": "^0.52.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.13",
     "vscode-jsonrpc": "^8.2.1",
+    "vscode-languageclient": "^9.0.1",
     "vscode-languageserver": "^9.0.1",
+    "vscode-languageserver-protocol": "^3.17.5",
     "vscode-languageserver-textdocument": "^1.0.12",
     "vscode-ws-jsonrpc": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/vscode": "^1.95.0",
     "@typescript-eslint/parser": "^8.3.0",
     "@vitejs/plugin-react": "^1.3.2",
     "prettier": "^3.3.3",
