--- a/monaco-editor/package.json
+++ b/monaco-editor/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "packageManager": "pnpm@9.9.0",
   "engineStrict": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc --noEmit && vite build",
@@ -27,6 +28,7 @@
     "vscode-ws-jsonrpc": "^3.3.2"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/vscode": "^1.95.0",
