--- a/react-styled-components/package.json
+++ b/react-styled-components/package.json
@@ -9,28 +9,31 @@
     "ts:watch": "tsc -w --noEmit -p tsconfig.json"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
-    "@vitejs/plugin-react": "^4",
+    "@typescript-eslint/parser": "^8.20.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8",
     "eslint-plugin-import": "^2",
     "eslint-plugin-prettier": "^5",
     "eslint-plugin-react": "^7",
     "eslint-plugin-react-hooks": "^4",
     "eslint-plugin-unused-imports": "^3",
-    "prettier": "^3.2.4",
+    "prettier": "^3.4.2",
+    "tslib": "^2.8.1",
     "typescript": "^5",
-    "vite": "^5"
+    "vite": "^6.0.7"
   },
   "dependencies": {
-    "mobx": "^6",
-    "mobx-react": "^9",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-is": "^18",
-    "styled-components": "^6"
-  }
+    "mobx": "^6.13.5",
+    "mobx-react": "^9.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-is": "^19.0.0",
+    "styled-components": "^6.1.14"
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
