--- a/react-styled-components/package.json
+++ b/react-styled-components/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "ts:watch": "tsc -w --noEmit -p tsconfig.json"
+    "ts:watch": "tsc -w --noEmit -p tsconfig.json",
+    "test": "vitest"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
@@ -25,7 +26,8 @@
     "prettier": "^3.4.2",
     "tslib": "^2.8.1",
     "typescript": "^5",
-    "vite": "^6.0.7"
+    "vite": "^6.0.7",
+    "vitest": "^3.0.0"
   },
   "dependencies": {
     "mobx": "^6.13.5",
