--- a/react-styled-components/package.json
+++ b/react-styled-components/package.json
@@ -30,6 +30,7 @@
     "vitest": "^3.0.0"
   },
   "dependencies": {
+    "fast-json-patch": "^3.1.1",
     "mobx": "^6.13.5",
     "mobx-react": "^9.2.0",
     "react": "^19.0.0",
